# opencode-service

./: README.md  main.py  opencode_client.py  pyproject.toml
